- Add "variant" property to windows in XRC.
- Add XRC handler for wxSimplebook.
- Return correct value from wxCommandEvent::GetString() for programmatically
  generated wxEVT_TEXT events from wxComboBox.
- Accept "default" as font family value in XRC (pieleric).

wxGTK:

- Fix mouse handling in wxNotebook containing wxListCtrl (Charlie Fenton).

wxMSW:

- Fix Cygwin 1.7 build.
- Work around a bug in MinGW 4.8 headers and fix build with it too.
- Include x64 configurations in MSVC 8/9 project files too.
- Fix parallel build of MSVC 11/12 solutions (Artur Wieczorek).
- Fix background of wxRadioBox buttons and wxSlider (Artur Wieczorek).
- Fix appearance of wxToggleButtons with non default colours (Artur Wieczorek).
- Fix drawing on wxDC when using right-to-left layout (Artur Wieczorek).
- Fix wxGrid appearance and behaviour in RTL (Artur Wieczorek).
- Fix creating wxBitmap from monochrome wxIcon or wxCursor (Artur Wieczorek).
- Add paragraph spacing attributes support to wxTextCtrl (dannchr).
- Show new style directory selector even for non existent paths (raychow).
- Fix order of radial gradient stops (Alexandru Pana).
- Fix font created using wxFont(wxFontInfo()) ctor.
- Fix wxFileName::GetShortcutTarget() in console applications.
- Fix wxFileName::MakeRelativeTo() for shortcut files (gafatoa).
- Fix height of initially empty wxBitmapComboBox (Artur Wieczorek).
- Fix setting label of submenu items (Artur Wieczorek).


3.0.1: (released 2014-06-15)
----------------------------

All:

- Fix wxMBConvUTF8::ToWChar() for non-NUL-terminated strings (andyr).
- Fix length returned from wxMBConvUTF16::ToWChar(NULL) (Thomas Goyne).
- Fix wxSocket::WaitForAccept() in non-main thread (Hajo Kirchhoff).
- Fix memory overallocation in wxVector::reserve() (Nigel Paton).
- Fix `wx-config --libs` in monolithic build.
- Fix wxFileSystemWatcher::RemoveAll() (Melroy Tellis).
- Fix the build under HP-UX (tested under 11.31).
- Add Aragonese translation.

All (GUI):
